--- a/5.2 关系代数优化.md
+++ b/5.2 关系代数优化.md
@@ -60,6 +60,7 @@ $$
 
 
 
+
 ###涉及投影的定律
 * 下推投影与下推选择不同，当下推投影时，投影留在原地是相当正常的
 * 下推投影是有用的，但一般不如下推选择那么有用。原因是投影并不减少元组数，只减少元组的长度
@@ -98,10 +99,6 @@ $$
   $$
 
   $$
-
-  $$
-
-  $$
   \pi_{a+b\rightarrow c, d+e\rightarrow y}(R \Join S) \\
   \Downarrow \\
   \pi_{x\rightarrow c,y}(\pi_{a + b\rightarrow x,c}(R) \Join \pi_{d+e\rightarrow y, c}(S))
@@ -111,7 +108,7 @@ $$
   $\pi_L(\sigma_C(R)) = \pi_L(\sigma_C(\pi_M(R)))$，其中$M$是$L$的输入属性列表或是条件$C$中提到的属性列表
 ###有关连接与积的定律
 * $R \Join_C S = \sigma_C(R \times S)$
-* $R \Join S = \pi_L(\sigma_C(R \tims S))$ 条件$C$的意思是$R$和$S$中具有相同名字的属性对进行等值比较，$L$是包含$R$和$S$中每一个的等值对中的一个属性以及其他所有属性的列表
+* $R \Join S = \pi_L(\sigma_C(R \times S))$ 条件$C$的意思是$R$和$S$中具有相同名字的属性对进行等值比较，$L$是包含$R$和$S$中每一个的等值对中的一个属性以及其他所有属性的列表
 实际中，我们通常从右到左应用这些规则
 ###有关消除重复的定律
 * 若R没有重复，则$\delta(R) = R$，这样的关系$R$的几个重要情形包括:
