--- a/5.2 关系代数优化.md
+++ b/5.2 关系代数优化.md
@@ -61,6 +61,7 @@ $$
 
 
 
+
 ###涉及投影的定律
 * 下推投影与下推选择不同，当下推投影时，投影留在原地是相当正常的
 * 下推投影是有用的，但一般不如下推选择那么有用。原因是投影并不减少元组数，只减少元组的长度
@@ -123,7 +124,7 @@ $$
 * $\delta(R \Join_C S) = \delta(R) \Join_C \delta(S)$
 * $\delta(\sigma_C(R)) = \sigma_C(\delta(R))$
 
-* $\delta(R \cap_B S) = \delta(R)\cap_B S = R \cap_B \delta(S) = \delta(R) \cup_B \delta(S)$
+* $\delta(R \cap_B S) = \delta(R)\cap_B S = R \cap_B \delta(S) = \delta(R) \cap_B \delta(S)$
 * 一般而言$\delta$不能移入$\cup_B, -, \pi$等运算符中
 ###涉及分组与聚集的定律
 * $\delta(\gamma_L(R)) = \gamma_L(R)$
