--- a/5.5 基于代价的计划选择.md
+++ b/5.5 基于代价的计划选择.md
@@ -66,7 +66,7 @@ where Jan.temp = July.temp;
 | $80 \sim 89$ |  $0$   |  $60$  |
 | $90 \sim 99$ |  $0$   |  $10$  |
 
-如果相应贷款分别有$T_1$与$T_2$个元组，且在这一带宽中值的个数是$V$，则在那些带宽上的连接的元组数估计是$\frac{T_1T_2}{V}$
+如果相应带宽分别有$T_1$与$T_2$个元组，且在这一带宽中值的个数是$V$，则在那些带宽上的连接的元组数估计是$\frac{T_1T_2}{V}$
 $$
 Jan(day, temp) \Join July(day, temp) \\
 \Downarrow \\
