fix error and finish chapter 5th

--- a/4.3 嵌套循环连接.md
+++ b/4.3 嵌套循环连接.md
@@ -67,7 +67,7 @@ END;
 
 ### 总结
 
-|            操作符             |         M         |       磁盘I/O        |
+|            操作符             |        $M$        |       磁盘I/O        |
 | :---------------------------: | :---------------: | :------------------: |
 |         $\sigma,\pi$          |        $1$        |         $B$          |
 |       $\gamma, \delta$        |        $B$        |         $B$          |
