--- a/4.4 基于排序的两趟算法.md
+++ b/4.4 基于排序的两趟算法.md
@@ -83,7 +83,7 @@ $\gamma_L(R)$的两趟算法与$\delta(R)$和TPPMS非常类似，概括如下
 
 ###基于排序的算法的总结
 
-|   操作符    | 大致需要的M | 磁盘I/O |
+|   操作符    | 大致需要的$M$ | 磁盘I/O |
 | :---------: | :---------: | :-----: |
 | $\tau,\gamma, \delta$ | $\sqrt{B}$ | $3B$ |
 | $\cap, \cup, -$ | $\sqrt{B(R)+B(S)}$ | $3(B(R)+3B(S))$ |
