--- a/4.5 基于散列的两趟算法.md
+++ b/4.5 基于散列的两趟算法.md
@@ -67,7 +67,7 @@ $$
 第二趟中，读取磁盘上所有的桶，所以一共需要$500 + 1000 + 2 \times (417 + 833) = 4000$次磁盘I/O，少于直接散列的$4500$次磁盘I/O。
 ### 基于散列的算法的比较
 
-|     操作符      |  大致需要的M  |             磁盘I/O              |
+|     操作符      | 大致需要的$M$ |             磁盘I/O              |
 | :-------------: | :-----------: | :------------------------------: |
 | $\gamma,\delta$ |  $\sqrt{B}$   |               $3B$               |
 | $\cap, \cup, -$ | $\sqrt{B(S)}$ |         $3(B(R) + B(S)$          |
