--- a/5.2 关系代数优化.md
+++ b/5.2 关系代数优化.md
@@ -57,11 +57,6 @@ $$
 
 
 
-
-
-
-
-
 ###涉及投影的定律
 * 下推投影与下推选择不同，当下推投影时，投影留在原地是相当正常的
 * 下推投影是有用的，但一般不如下推选择那么有用。原因是投影并不减少元组数，只减少元组的长度
@@ -125,9 +120,9 @@ $$
 * $\delta(\sigma_C(R)) = \sigma_C(\delta(R))$
 
 * $\delta(R \cap_B S) = \delta(R)\cap_B S = R \cap_B \delta(S) = \delta(R) \cap_B \delta(S)$
-* 一般而言$\delta$不能移入$\cup_B, -, \pi$等运算符中
+* 一般而言$\delta$不能移入$\cup_B, -_B, \pi$等运算符中
 ###涉及分组与聚集的定律
-* $\delta(\gamma_L(R)) = \gamma_L(R)$
+* $\delta(\gamma_L(R)) = \gamma_L(R)​$分组与聚集吸收去重。
 * 在应用$\gamma$运算符前，只要我们需要，就可以用投影在参数中去除无用的属性。该定律可写为：
   $\gamma_L(R) = \gamma_L(\pi_M(R))$，其中$M$是至少包含$L$中提到的所有的$R$属性的列表。
 * 其他变换依赖于$\gamma$运算符之中的聚集，原因是因为某些聚集，尤其是$MIN$与$MAX$，不受重复是否存在影响。而另一些聚集，如$SUM, COUNT, AVG$如果在聚集前消除重复，一般会得到不同的值
