--- a/5.5 基于代价的计划选择.md
+++ b/5.5 基于代价的计划选择.md
@@ -97,7 +97,7 @@ $\delta(\sigma_{a=10}(R)) \Join \delta(S)$
 ------
 $$
 T(\sigma_{a=10}(R)) = \frac{T(R)}{V(R,a)} = 5000 \div 50 = 100 \\
-T(\delta(\sigma_{a=10}(R) \Join S )) = \frac {T(\sigma_{a=10}(R))}{2} = 50 \\
+T(\delta(\sigma_{a=10}(R))) = \frac {T(\sigma_{a=10}(R))}{2} = 50 \\
 T(\delta(S)) = \frac{T(S)}{2} = 1000 \\
 T(\delta(\sigma_{a=10}(R)) \Join \delta(S)) = T(\delta(\sigma_{a=10}(R))) \times T(\delta(S)) \div max(V(R,b), V(S, b)) \\
 \Downarrow \\
@@ -110,7 +110,7 @@ $$
 T(\sigma_{a=10}(R)) = \frac{T(R)}{V(R,a)} = 5000 \div 50 = 100 \\
 T(\sigma_{a=10}(R) \Join S) = T(\sigma_{a=10}(R)) \times T(R) \div max(V(R,b), V(S,b)) = 100 \times 2000 \div 200 = 1000 \\
 T(\delta(\sigma_{a=10}(R) \Join S)) = \frac{T(\sigma_{a=10}(R) \Join S)}{2} = 1000 \div 2 = 500 \\
-\sum = 100 + 1000 = 1150
+\sum = 100 + 1000 = 1100
 $$
 
 我们把根节点和叶节点之外的所有大小估计相加，我们排除根节点和叶节点，是因为这些节点的大小不依赖于计划的选取。计划a的大小为1150，计划b的大小为1100
