--- a/6.3 redo日志.md
+++ b/6.3 redo日志.md
@@ -85,5 +85,9 @@ $$
 
 ### 使用带检查点redo日志的恢复
 
+假设在崩溃发生前日志中最后一条检查点记录是$<END\ CKPT>$。现在，我们知道对应的$<START\ CKPT(T_1, \dots, T_k)>$前提交的事务已经将其修改写到了磁盘。但是$T_i$中任一事务或检查点开始后启动的任一事务即使已经提交，都仍可能未将其修改写入到磁盘上。因此我们从$<START\ CKPT(T_1, \dots, T_k)>$开始恢复。在找到最早的$<START\ T_i>$后就不必往前看。
 
+假设日志中最后一条检查点日志为$<START\ CKPT(T_1, \dots, T_k)>$
+
+我们不能确定在此检查点之前开始提交的事务是否将修改写到磁盘上。因此我们搜索到前一$<END\ CKPT>$记录，找到对应的$<START\ CKPT(S_1,\ldots,S_m)>$记录，并重做这些已经提交的事务。
 
