--- a/6.2 undo日志.md
+++ b/6.2 undo日志.md
@@ -14,7 +14,7 @@
 
 $U_1$：如果事务$T$改变了数据库元素$X$，那么形如$<T, X, v>$的日志记录必须在$X$的新值写到磁盘之前写到磁盘中。
 
-$U_2$：如果事务提交，则其$COMMIT$日志记录必须在事务改变的所有数据库元素先写到磁盘后写到磁盘中，但应尽快。
+$U_2$：如果事务提交，则其$COMMIT$日志记录必须在事务改变的所有数据库元素先写到磁盘之后后写到磁盘中，但应尽快。
 
 简要概括规则$U_1$和$U_2$，与一个事务相关的内容必须按如下顺序写到磁盘：
 
@@ -61,9 +61,9 @@ $$
 
 1. 如果$T$的$COMMIT$记录被扫描到，则什么也不做。$T$已经被提交而不需要撤销。
 
-2. 否则，$T$是一个未完成的事务或者一个中止的事务。恢复管理器必须将数据库中$X$的值改为$v$。
+2. 否则，$T​$是一个未完成的事务或者一个中止的事务。恢复管理器必须将数据库中$X​$的值改为$v​$。
 
-做好这些改变后，恢复管理器必须为以前未中止的且未完成的每个事务$T$写入一个日志记录$<ABORT T>$，然后刷新日志。之后数据库恢复正常。
+做好这些改变后，恢复管理器必须为以前未中止的且未完成的每个事务$T$写入一个日志记录$<ABORT\ T>$，然后刷新日志。之后数据库恢复正常。
 
 #### 恢复过程中的崩溃
 
