--- a/7.5 封锁调度器的一种体系结构.md
+++ b/7.5 封锁调度器的一种体系结构.md
@@ -22,7 +22,7 @@
 ###锁表
 
 锁表是将数据库元素与有关该元素的封锁信息联系起来的一个关联表。这个表可以用一个散列表来表示，使用数据库元素地址作为散列码。任何未被封锁的元素在表中不出现，因此表的大小只与被封锁元素的数目成正比。
-![7-5-2](/Users/didi/z/keeplearning/7-5-2.jpg)
+![7-5-2](./7-5-2.jpg)
 1. **组模式**概括事务申请$A$上的一个新锁时所面临的最苛刻的条件。在共享-排他-更新(SXU)模式中，组模式
    1. $S$代表被持有的为共享锁
    2. $U$代表有一个更新锁，可能有一个或多个共享锁
