--- a/7.6 数据库元素的层次.md
+++ b/7.6 数据库元素的层次.md
@@ -6,7 +6,7 @@
 
 警示锁解决管理不同粒度的问题。
 数据库元素分以下三个级别：
-![7-6-1](/Users/ace/z/keeplearning/7-6-1.jpg)
+![7-6-1](./7-6-1.jpg)
 
 1. 关系是最大的可封锁元素。
 2. 每个关系由一个或多个块或页组成，每个块或页上存储了关系的元组。
@@ -42,7 +42,7 @@ WHERE title = 'Gone With the Wind';
 ```
 锁的集合如图所示：
 
-![7-6-2](/Users/ace/z/keeplearning/7-6-2.jpg)
+![7-6-2](./7-6-2.jpg)
 
 ### 幻象与插入的正确处理
 
