--- a/6.2 undo日志.md
+++ b/6.2 undo日志.md
@@ -96,5 +96,5 @@ $$
 ####非静止检查点恢复
 
 * 如果先遇到$<END\ CKPT>$记录，那么所有未完成事务在前一$<START\ CKPT(T_1,\ldots,T_k)>$记录后开始。
-* 如果先遇到$<START\ CKPT(T_1,\ldots,T_k)>$，那么崩溃发生在检查点发生过程中。未完成的事务包括导到$START\ CKPT$前遇到的那些以及$T_1,\ldots,T_k$中发生在崩溃前还没有完成的那些。因此，扫描到$T_1,\ldots,T_k$中最早开始的事务的开始后就不必向前扫描。
+* 如果先遇到$<START\ CKPT(T_1,\ldots,T_k)>$，那么崩溃发生在检查点发生过程中。未完成的事务包括到达$START\ CKPT$前遇到的那些以及$T_1,\ldots,T_k$中发生在崩溃前还没有完成的那些。因此，扫描到$T_1,\ldots,T_k$中最早开始的事务的开始后就不必向前扫描。
 * 一旦$<END\ CKPT>$记录写到了磁盘，上一个$<START\ CKPT(T_1,\ldots,T_k)>$记录前的日志就可以被删除。
