--- a/4.5 基于散列的两趟算法.md
+++ b/4.5 基于散列的两趟算法.md
@@ -20,7 +20,7 @@
 ### 基于散列的并、交、差算法
 
 * $R\cup_SS$将$R$和$S$各自散列到$M-1$个桶，例如$R_1,R_2,\ldots,R_{M-1}$和$S_1,S_2,\ldots,S_{M-1}$，然后对于所有$i$我们计算$R_i$和$S_i$的集合并，并输出结果
-* $R\cup_SS$简单的包并算法即可，不比引入散列
+* $R\cup_SS$简单的包并算法即可，不必引入散列
 * 计算$R$和$S$的交或差，像集合并一样分别散列到$M-1$个桶，并在每个$R_i$和$S_i$上执行一趟算法。
 所有一趟算法需要$B(R) + B(S)$次磁盘I/O，加上每个块散列的两次磁盘I/O，一共是$3(B(R)+B(S))$
 为了使算法可行，必须使$R_i$和$S_i$的一趟算法可行，$min(\frac{B(R)}{M-1}, \frac{B(S)}{M-1}) \le M-1$，近似于$min(B(R), B(S)) \le M^2$
@@ -46,9 +46,9 @@ $$
 
 现在我们读取另一个关系$R$的元组，以将这个关系散列到桶中时，我们在内存中保留：
 1.	$S$的$m$个从未写到磁盘中的桶
-	.	$R$的$k-m$个桶中每一个的一块，这$k-m$个桶对应的$S$桶是写到磁盘上的
+2.	$R$的$k-m$个桶中每一个的一块，这$k-m$个桶对应的$S$桶是写到磁盘上的
 
-如果$R$的一个元组$t$散列到最开始的$m$个桶得有一个里，那么立刻将它和对应$S$桶的元祖的连接。如果$t$散列到对应的$S$桶位于磁盘上的某个桶中，那么将$t$写入对应的内存块中，并最终写入磁盘。
+如果$R$的一个元组$t$散列到最开始的$m$个桶的一个里，那么立刻将它和对应$S$桶的元祖的连接。如果$t$散列到对应的$S$桶位于磁盘上的某个桶中，那么将$t$写入对应的内存块中，并最终写入磁盘。
 在第二趟中，连接$k-m$个不在内存中的桶
 对于留在内存中的$S$和$R$桶中的每一个块，节省的磁盘I/O为$2$，因为在内存中占的比例为$\frac{m}{k}$，所以节省$2 \frac{m}{k}(B(R)+B(S))$。
 在$m$等于$1$，且$k$尽可能小的情况下，节省I/O最多。
@@ -62,7 +62,7 @@ $$
 (3 - \frac{2M}{B(S)})(B(R)+B(S)))
 $$
 
-例 连接$R$和$S$，$M=101$，$B(R)=1000$，$B(S)=500$，则$k \approx \frac{500}{101}$，假设选定$k = 5$，那么，平均每个桶将拥有$S$的$100$个块。则需要$100 + 4$个块，少于$M$。
+例 连接$R$和$S$，$M=101$，$B(R)=1000$，$B(S)=500$，则$k \approx \frac{500}{101}$，假设选定$k = 5$，那么，平均每个桶将拥有$S$的$100$个块。则需要$100 + 4$个块，大于$M$。
 所以选择$k = 6$，则$m = 101 - 5 = 96$，桶的大小的预期为$\frac{500}{6} = 83$，第一趟处理$S的所有内容，$500$个读取I/O，将$500 - 83$个块写入磁盘，即$417$个写入I/O，第一趟处理$R$时，$1000$次磁盘I/O，并将$1000$个块的$\frac{5}{6}$写入到磁盘上，即$833$个写入I/O
 第二趟中，读取磁盘上所有的桶，所以一共需要$500 + 1000 + 2 \times (417 + 833) = 4000$次磁盘I/O，少于直接散列的$4500$次磁盘I/O。
 ### 基于散列的算法的比较
