--- a/5.5 基于代价的计划选择.md
+++ b/5.5 基于代价的计划选择.md
@@ -74,7 +74,7 @@ Jan(day, temp) \Join_{tmp \in [40, 49]} July(day, temp) + Jan(day, temp) \Join_{
 \Downarrow \\
 10 \times 5 \div 10 + 5 \times 20 \div 10 = 15
 $$
-如果我们没有直方图，只知道每个关系有$245$个元组分布于$0 \sim 99$
+如果我们没有直方图，只知道每个关系有$245$个元组分布于$0 \sim 99$的100个值中，则对连接大小的估计为$245 \times 245 \div 100 = 600$个元组。
 
 ###统计量的计算
 在查询优化中，统计量通常仅是周期性地加以计算，原因如下
