--- a/6.3 redo日志.md
+++ b/6.3 redo日志.md
@@ -62,7 +62,7 @@ redo日志的检查点，有一个undo日志没有的问题。由于已提交事
 
 1. 写入日志记录$<START\ CKPT(T_1, \dots, T_k)>$，其中$T_1, \dots,T_k$是所有未提交的事务，并刷新日志。
 
-2. 将$STAR\ CKPT$记录写入日志时所有已提交事务已经写到缓冲区但还没有写到磁盘的数据库元素写到磁盘。
+2. 将$START\ CKPT​$记录写入日志时所有已提交事务已经写到缓冲区但还没有写到磁盘的数据库元素写到磁盘。
 
 3. 写入日志记录$<END\ CKPT>$并刷新日志。
 
