--- a/7.8 使用时间戳的并发控制.md
+++ b/7.8 使用时间戳的并发控制.md
@@ -43,10 +43,12 @@
 事务$T$在事务$U$后开始，$T$读$X$在$U$写入$X$之后，但若是$U$被中止，$T$会读到脏数据。最好将$T$读$X$推迟到$U$提交或中止后，通过$C(X)$为假断定$U$尚未提交。
 另一种可能的情况是
 ![7-8-4](./7-8-4.jpg)
-$TS(T) < TS(U)$并且$U$先写$X$。当$T$试图写$X$时，正确的动作是什么也不做，显然不会有另一个事务应该读$T$的$X$值却读到$U$的值，因为如果$V$试图读$X$，它将因为过完的读而中止。以后对$V$执行的读将需要$U$的$X$值或者一个更晚写入的$X$值，而不是$T$的。写操作在写时间更晚的写操作已经发生时可以被跳过，称为**Thomas写法则**。
+$TS(T) < TS(U)$并且$U$先写$X$。当$T$试图写$X$时，正确的动作是什么也不做，显然不会有另一个事务应该读$T$的$X$值却读到$U$的值，因为如果$V$试图读$X$，它将因为过晚的读而中止。以后对$V$执行的读将需要$U$的$X$值或者一个更晚写入的$X$值，而不是$T$的。写操作在写时间更晚的写操作已经发生时可以被跳过，称为**Thomas写法则**。
 但是Thomas写法则有一个潜在的问题，即如图所示，$U$最后被中止，那么他的$X$应该被删掉，并且恢复前一个值和写时间。由于$T$已提交，$T$写入的$X$值应该被恢复。但是由于跳过$T$的写，已经不能恢复了。
 假设基于时间戳的调度器有如下的能力。
 * 当事务$T$写数据库元素$X$时，写是尝试性的，且在$T$中止时可以撤销。提交位$C(X)$为假，调度器保存$X$的旧值和原有$WT(X)$的一个拷贝。
+
+### 基于时间戳调度的规则
 ### 多版本时间戳
 
 ### 时间戳与封锁
