--- a/4.3 嵌套循环连接.md
+++ b/4.3 嵌套循环连接.md
@@ -44,7 +44,7 @@ Close() {
 
 ###基于块的循环嵌套连接算法
 ```
-For chunk size is M-1 blocks In S:
+For chunk size is M - 1 blocks In S:
 	Read into M - 1 blocks;
 	construct search struct, the key is the intersection of R and S;
 	For b In R:
@@ -56,8 +56,8 @@ For chunk size is M-1 blocks In S:
 	END;
 END;
 ```
-例：假定$B(R) = 1000 B(S) = 500 M = 101$
-最外层循环迭代$5$次，每次迭代中，用$100$个磁盘I/O读取$S$的$chunk$，在第二层循环中用$1000$个I/O来完整的读取$R$。因此磁盘I/O的总量为$5500$
+例：假定$B(R) = 1000;\ B(S) = 500;\ M = 101$
+最外层循环迭代$5​$次，每次迭代中，用$100​$个磁盘I/O读取$S​$的$chunk​$，在第二层循环中用$1000​$个I/O来完整的读取$R​$。因此磁盘I/O的总量为$5500​$
 
 如果颠倒$R$和$S$的角色，外层循环为$10$次迭代，每一次迭代使用$1000 \div 100 + 500 = 600$次磁盘I/O，总共$6000$次。一般来说，外层循环中使用较小的关系略有优势。
 
