--- a/7.3 使用锁的可串行化实现.md
+++ b/7.3 使用锁的可串行化实现.md
@@ -32,4 +32,23 @@ $u_i(X)$：事务$T_i$释放它在数据库元素$X$上的锁。
 
 #### 死锁的风险
 
-两阶段封锁
+两阶段封锁一个未解决的问题是死锁的风险。
+
+例：考虑
+$$
+T_1:l_1(A);r_1(A);A:=A+100;w_1(A);l_1(B);u_1(A);r_1(B);B:=B+100;w_1(B);u_1(B);\\
+T_2:l_2(B);r_2(B);B::=B*2;w_2(B);l_2(A);u_2(B);r_2(A);A:=A*2;w_2(A);u_2(A);
+$$
+可能的一个交错为
+
+|      $T_1$       |      $T_2$       |  $A$  | $B$  |
+| :--------------: | :--------------: | :---: | :--: |
+|                  |                  | $25$  | $25$ |
+| $l_1(A);r_1(A);$ |                  |       |      |
+|                  | $l_2(B);r_2(B);$ |       |      |
+|   $A:=A+100;$    |                  |       |      |
+|                  |    $B:=B*2;$     |       |      |
+|    $w_1(A);$     |                  | $125$ |      |
+|                  |    $w_2(B);$     |       | $50$ |
+|  $l_1(B)$被拒绝  |  $l_1(A)$被拒绝  |       |      |
+
