move img to images

--- a/6.1 可恢复操作的问题和模型.md
+++ b/6.1 可恢复操作的问题和模型.md
@@ -40,7 +40,7 @@
 发生崩溃时，恢复管理器就被激活，恢复管理器检查日志并在必要时利用日志恢复数据。
 
 
-![image-20180515221506791](./6-1.png)
+![image-20180515221506791](./images/6-1.png)
 
 ###事务的正确执行
 
