--- a/7.5 封锁调度器的一种体系结构.md
+++ b/7.5 封锁调度器的一种体系结构.md
@@ -8,7 +8,7 @@
 
 图示为一个由两部分构成的调度器，它接受来自事务的诸如读、写、提交以及中止这样的请求。调度器维护一个锁表，通常锁表使用的的内存不是用于查询执行和日志的缓冲池的一部分。锁表是DBMS的一部分，并且像DBMS的其他代码和数据那样由操作系统为其分配空间。
 
-![7-5](./7-5.jpeg)
+![7-5](./images/7-5-1.jpg)
 事务请求的动作通常通过调度器传送并在数据库上执行。但是某些情况下，事务等待一个锁而被推迟，其请求暂时不被传送到数据库。调度器的两个部分执行如下动作：
 1. 第$I$部分接受事务产生的数据流，并在所有数据库访问操作如读、写、增量和更新前插入适当的锁动作。数据库访问操作被传送到第$II$部分。不管调度器是用什么样的封锁模式集合，调度器的第$I$部分必须从其中选择适当的封锁方式。
 2. 第$II$部分接受由第$I$部分传来的封锁和数据库访问动作序列，并执行。如果第$II$部分接收到一个封锁或数据库访问请求，那么它要决定提出请求的事务$T$是否因为某个锁不能获得而被推迟。如果被推迟，这个动作加入一个最终必须为事务$T$执行的动作列表中。如果$T$不被推迟(即获得所有锁)，那么
@@ -22,7 +22,7 @@
 ###锁表
 
 锁表是将数据库元素与有关该元素的封锁信息联系起来的一个关联表。这个表可以用一个散列表来表示，使用数据库元素地址作为散列码。任何未被封锁的元素在表中不出现，因此表的大小只与被封锁元素的数目成正比。
-![7-5-2](./7-5-2.jpg)
+![7-5-2](./images/7-5-2.jpg)
 1. **组模式**概括事务申请$A$上的一个新锁时所面临的最苛刻的条件。在共享-排他-更新(SXU)模式中，组模式
    1. $S$代表被持有的为共享锁
    2. $U$代表有一个更新锁，可能有一个或多个共享锁
