--- a/7.7 树协议.md
+++ b/7.7 树协议.md
@@ -17,7 +17,7 @@
 
 例：
 
-### ![7-7-1](./7-7-1.jpg)
+### ![7-7-1](./images/7-7-1.jpg)
 
 |      $T_1$       |      $T_2$       |      $T_3$       |
 | :--------------: | :--------------: | :--------------: |
