fix a bug and add 8.1

--- a/7.2 冲突可串行化.md
+++ b/7.2 冲突可串行化.md
@@ -49,7 +49,7 @@ $r_1(B)$在$w_2(B)$之前，所以$T_1 <_S T_2$。
 
 优先图如下所示：
 
-![7-2](./7-2.jpeg)
+![7-2](./images/7-2-1.jpg)
 
 如果$S$的优先图有环，那么$S$不是可冲突串行化的。如果无环，则$S$是可冲突串行化的，而且节点的任何一个拓扑顺序都是一个冲突等价的串行顺序。
 
