--- a/8.1 可串行性和可恢复性.md
+++ b/8.1 可串行性和可恢复性.md
@@ -29,7 +29,7 @@
 1. 每一个严格调度都是$ACR$调度。这是因为$T_2$无法读取$T_1$所写入的元素$X$的值，直到$T_1$释放所有的排他锁。
 2. 每一个严格调度都是可串行化的。
 
-![8-1-1](/Users/ace/z/keeplearning/images/8-1-1.jpg)
+![8-1-1](./images/8-1-1.jpg)
 
 修复缓冲数据的难度依赖于数据库元素是块还是更小的东西。
 
@@ -69,3 +69,24 @@
 
 ###从逻辑日志中恢复
 
+**日志序号**
+
+* 每条日志被赋予比前一条记录大1的编号。一条典型的逻辑日志记录的形式为$<L,T,A,B>$，其中：
+  * $L$是表示日志序号的整数。
+  * $T$是涉及的事务
+  * $A$是事务的动作，例如，插入元组$t$
+  * $B$是执行事务的块。
+* 对于每一种动作，都用一个**补偿**动作来在逻辑上对这个动作进行undo。例如，“插入元组$t$”的补偿动作为“删除元组$t$”。
+* 如果事务$T$中止，$T$执行的每一个动作的补偿动作都会被执行，而补偿动作的动作也会被记录到日志中。
+* 每一个块在块首维护最后对该块产生影响的动作的日志序号。
+
+假设我们现在需要在系统崩溃后利用逻辑日志进行恢复。下面是对需要采取的步骤的概述。
+
+1. 对崩溃时数据库的状态进行重建，包括当前的数据值在缓冲中因而被丢失的块。我们要做的是：
+   1. 找到日志中最近的检查点，并由它确定当时处于活动状态的事务的集合。
+   2. 对于每一条日志记录$<L,T,A,B>$，比较块上的日志序号$N$和当前日志记录的日志序号$L$。如果$N<L$，则redo动作$A$；该动作没有在块$B$上执行。反之，当$N\ge L$时，就什么也不做；动作$A$已经对块$B$产生了影响。
+   3. 当遇到所有关于事务$T$开始、提交或是中止的日志记录，对活动事务集合进行相应的调整。
+2. 当我们到达日志结束位置时事务集合中依旧处于活动状态的事务需要被中止。我们要做的是：
+   1. 再次对日志进行扫描，这次扫描从末尾逐个向前直到上一个检查点。每当我们遇到一个需要被中止的事务$T$的日志记录$<L,T,A,B>$，在块$B$上执行补偿动作，并将补偿动作的执行记录到日志中。
+   2. 如果我们需要中止一个在最近的检查点之前开始的事务，那么继续向前扫描日志直到每个事务的起始记录都被找到。
+   3. 为每一个需要中止的事务在日志中写入中止的记录。
