covert 节点 to 结点 and add 8.3

--- a/5.5 基于代价的计划选择.md
+++ b/5.5 基于代价的计划选择.md
@@ -113,7 +113,7 @@ T(\delta(\sigma_{a=10}(R) \Join S)) = \frac{T(\sigma_{a=10}(R) \Join S)}{2} = 10
 \sum = 100 + 1000 = 1100
 $$
 
-我们把根节点和叶节点之外的所有大小估计相加，我们排除根节点和叶节点，是因为这些节点的大小不依赖于计划的选取。计划a的大小为1150，计划b的大小为1100
+我们把根结点和叶结点之外的所有大小估计相加，我们排除根结点和叶结点，是因为这些结点的大小不依赖于计划的选取。计划a的大小为1150，计划b的大小为1100
 ###枚举物理计划的方法
 底线为穷举法(exhaustive)
 * 自顶向下 - 递归
@@ -134,7 +134,7 @@ $$
 ####Selinger风格的优化
 这个方法改进了动态规划方法，不仅记录了每个子表达式的最小代价的计划，而且也记录了那些具有较高代价但所产生的结果对表达式中高层很有用的计划。例如
 当子表达式的结果按以下属性排序：
-1. 在根节点上排序$\Gamma$运算符中说明的属性
+1. 在根结点上排序$\Gamma$运算符中说明的属性
 
 2. 稍后的分组运算符$\gamma$的分组属性
 
