--- a/5.6 连接顺序的选择.md
+++ b/5.6 连接顺序的选择.md
@@ -10,7 +10,7 @@
 
 #### 左深连接树
 
-一棵二叉树如果所有右子节点都是叶节点的话，它就是**左深树**。所有左子节点都是叶节点的话，就是**右深树**。如果都不是的话，就是**浓密树**，**左深树**作为连接顺序有两个优点：
+一棵二叉树如果所有右子结点都是叶结点的话，它就是**左深树**。所有左子结点都是叶结点的话，就是**右深树**。如果都不是的话，就是**浓密树**，**左深树**作为连接顺序有两个优点：
 
 1. 对于给定树叶的可能的左深树的数目很大，但比所有树的数目小。因此如果我们将搜索限定在左深树，查询计划的搜索可用于比较大的查询。
 2. 用于连接的左深树可以和通用的连接算法很好的交互，尤其是嵌套循环连接和一趟连接。基于左深树和这些算法的查询计划将会比非左深树所用的同样的算法更有效。
