--- a/5.7 物理查询计划选择的完成.md
+++ b/5.7 物理查询计划选择的完成.md
@@ -155,6 +155,6 @@ $$
 
 2. 以从下到上，从左到右的顺序依次执行各子树，即执行树的前序遍历。
 
-3. 使用一个迭代器网络来执行每一棵子树的所有节点。因此，在一棵子树中所有的节点被同步地执行，在它们的运算符间用$GetNext$调用来决定事件的确切顺序。
+3. 使用一个迭代器网络来执行每一棵子树的所有结点。因此，在一棵子树中所有的结点被同步地执行，在它们的运算符间用$GetNext$调用来决定事件的确切顺序。
 
    根据这个顺序，查询优化现在能够为查询生成执行代码，也许是一个函数调用序列。
