--- a/7.6 数据库元素的层次.md
+++ b/7.6 数据库元素的层次.md
@@ -15,7 +15,7 @@
 在数据库元素的层次上管理锁的规则由**警示协议**构成，它既包括**普通锁**又包括**警示锁**。警示锁将通过在普通锁前面加前缀$I$表示，例如$IS$表示获得子元素上的一个共享锁的意向。警示协议的规则是：
 1. 要在任何元素上加$S$或$X$锁，必须从层次结构的根开始。
 2. 如果已经将要封锁的元素的位置，则不需要进一步查找，进而请求该元素上的$S$或$X$锁。
-3. 如果希望封锁的元素在层次结构中更靠下，那么我们在这一节点上加一个警示锁，当前节点上的锁被授予后，我们继续向适当的子节点行进。
+3. 如果希望封锁的元素在层次结构中更靠下，那么我们在这一结点上加一个警示锁，当前结点上的锁被授予后，我们继续向适当的子结点行进。
 
 |      | $IS$ | $IX$ | $S$  | $X$  |
 | :--: | :--: | :--: | :--: | :--: |
