--- a/8.2 死锁.md
+++ b/8.2 死锁.md
@@ -10,7 +10,7 @@
 
 **等待图**表明哪些事务在等待其他事务持有的锁。这种图可以检测死锁，也可以预防死锁。
 
-对于节点(事务)$T$和$U$如果存在某个数据库元素使：
+对于结点(事务)$T$和$U$如果存在某个数据库元素使：
 
 1. $U$持有$A$上的一个锁。
 2. $T$等待$A$上的一个锁。
