--- a/7.2 冲突可串行化.md
+++ b/7.2 冲突可串行化.md
@@ -39,7 +39,7 @@ $$
 3. $A_1$和$A_2$至少有一个是写动作。
 
 这是我们不能交换$A_1$和$A_2$顺序的情况。因此，在任何冲突等价于$S$的调度中$A_1$将出现在$A_2$前。所以，冲突等价的串行调度必然使$T_1$在$T_2$前。
-我们可以在**优先图**中概括这样的先后顺序。优先图的节点是调度$S$中的事务。当这些事务是具有不同的$i$的$T_i$时，我们仅用整数$i$来标记$T_i$的节点。如果$T_1 <_S T_j$，则有一条从节点$i$到节点$j$的弧。
+我们可以在**优先图**中概括这样的先后顺序。优先图的结点是调度$S$中的事务。当这些事务是具有不同的$i$的$T_i$时，我们仅用整数$i$来标记$T_i$的结点。如果$T_1 <_S T_j$，则有一条从结点$i$到结点$j$的弧。
 例：下面的调度$S$涉及三个事务$T_1$、$T_2$和$T_3$。
 $$
 S:r_2(A);r_1(B);w_2(A);r_3(A);w_1(B);w_3(A);r_2(B);w_2(B);
@@ -51,7 +51,7 @@ $r_1(B)$在$w_2(B)$之前，所以$T_1 <_S T_2$。
 
 ![7-2](./images/7-2-1.jpg)
 
-如果$S$的优先图有环，那么$S$不是可冲突串行化的。如果无环，则$S$是可冲突串行化的，而且节点的任何一个拓扑顺序都是一个冲突等价的串行顺序。
+如果$S$的优先图有环，那么$S$不是可冲突串行化的。如果无环，则$S$是可冲突串行化的，而且结点的任何一个拓扑顺序都是一个冲突等价的串行顺序。
 
 #### 为什么冲突可串行化对于可串行化来说不是必要的
 
