fix typo of 4.1

--- a/4.1 物理查询计划操作符介绍.md
+++ b/4.1 物理查询计划操作符介绍.md
@@ -14,8 +14,8 @@
 ###衡量代价的参数
 * $M$  表示一个特定的操作符执行的时候可获得内存缓冲区的数目
 * $B(R)$ 关系$R$所有元组所需的块的数目，通常，我们假设$R$是聚集的，即$R$存储在$B$个块或近似$B$个块中
-* $TR$ $R$中元组的数目
-* $V(R, a)$ 是 $R$中$a$属性对应列上不同值的数目。
+* $T(R)$ $R$中元组的数目
+* $V(R, a)​$ 是 $R​$中$a​$属性对应列上不同值的数目。
 ###实现物理操作符的迭代器
 * $Open()$
 * $GetNext()$
