--- a/7.2 冲突可串行化.md
+++ b/7.2 冲突可串行化.md
@@ -7,7 +7,7 @@
 2. $r_i(X)$ $w_j(Y)$不冲突，只要$X\ne Y$
 3. $w_i(X)$ $w_j(Y)$不冲突，只要$X\ne Y$
 
-有三种情况不能交换动作的顺讯
+有三种情况不能交换动作的顺序
 1. 同一事务的两个动作，如$r_i(X)$和$w_i(Y)$总是冲突的
 2. 不同事务对同一数据库元素的写冲突。$w_i(X)$和$w_j(X)$是一个冲突。
 3. 不同事务对同一数据库元素的读和写冲突。$w_i(X)$和$r_j(X)$是一个冲突。
