--- a/7.9 使用有效性确认的并发控制.md
+++ b/7.9 使用有效性确认的并发控制.md
@@ -20,7 +20,7 @@
 
    1. $U$在$VAL$或$FIN$中；即$U$已经过有效性确认。
    2. $FIN(U) > START(T)$；即$U$在$T$开始前没有完成。
-   3. $RS(T) \cap WS(T) \ne \varnothing$；设其包含数据库元素$X$。
+   3. $RS(T) \cap WS(U) \ne \varnothing$；设其包含数据库元素$X$。
 
    那么$U$可能在$T$读$X$后写$X$。事实上，$U$甚至可能还没有写$X$。$U$写了$X$但并不及时的一种情况。由于$T$是否读到$U$是未知的，所以我们必须回滚$T$以避免$T$和$U$的动作与假设串行顺序不一致的风险。
 
@@ -28,8 +28,8 @@
 
 2. 假设存在事务$U$满足：
    1. $U$在$VAL$中；即$U$已经完成有效性确认。
-   2. $FIN(U) > VAL(T)$；即$U$在$T$进入其有效性确认阶段以前没有完成。
-   3. $WS(T) \cap WS(T) \ne \varnothing$；设其包含数据库元素X。
+   2. $FIN(U) > VAL(T)​$；即$U​$在$T​$进入其有效性确认阶段以前没有完成。
+   3. $WS(T) \cap WS(U) \ne \varnothing$；设其包含数据库元素X。
 
    这时$T$和$U$都必须写$X$的值，如果我们确认$T$的有效性，它就可能在$U$前写$X$。由于不确定，我们必须回滚$T$以保证它不会违反假设的$T$在$U$后的串行顺序。
 
