--- a/4.5 基于散列的两趟算法.md
+++ b/4.5 基于散列的两趟算法.md
@@ -63,7 +63,7 @@ $$
 $$
 
 例 连接$R$和$S$，$M=101$，$B(R)=1000$，$B(S)=500$，则$k \approx \frac{500}{101}$，假设选定$k = 5$，那么，平均每个桶将拥有$S$的$100$个块。则需要$100 + 4$个块，大于$M$。
-所以选择$k = 6$，则$m = 101 - 5 = 96$，桶的大小的预期为$\frac{500}{6} = 83$，第一趟处理$S的所有内容，$500$个读取I/O，将$500 - 83$个块写入磁盘，即$417$个写入I/O，第一趟处理$R$时，$1000$次磁盘I/O，并将$1000$个块的$\frac{5}{6}$写入到磁盘上，即$833$个写入I/O
+所以选择$k = 6$，则$m = 101 - 5 = 96$，桶的大小的预期为$\frac{500}{6} = 83$，第一趟处理$S$的所有内容，$500$个读取I/O，将$500 - 83$个块写入磁盘，即$417$个写入I/O，第一趟处理$R$时，$1000$次磁盘I/O，并将$1000$个块的$\frac{5}{6}$写入到磁盘上，即$833$个写入I/O
 第二趟中，读取磁盘上所有的桶，所以一共需要$500 + 1000 + 2 \times (417 + 833) = 4000$次磁盘I/O，少于直接散列的$4500$次磁盘I/O。
 ### 基于散列的算法的比较
 
