--- a/4.6 基于索引的算法.md
+++ b/4.6 基于索引的算法.md
@@ -30,7 +30,7 @@ $\sigma_C(R)$
 
 假设$S$有一个属性$Y$上的索引。计算连接的方法是检查$R$上的每一个块，并在每一个块中考虑每一个元组$t$。令$t_Y$是对应于属性$Y$的部分。使用索引来查找$S$中所有在$Y$部分上具有$t_Y$的元组，输出这些元组与$t$的连接。
 
-对于$R$的每一个元组，平均读取$S$的$\frac{T(S)}{V(S,Y)}$个元组。如果$SS在$Y$上有一个非聚簇的索引，那么所需的磁盘I/O数量是$\frac{T(R)T(S)}{V(S,Y)}$，如果索引是聚簇的，那么$\frac{T(R)B(S))}{V(S,Y)}$就够了。
+对于$R$的每一个元组，平均读取$S$的$\frac{T(S)}{V(S,Y)}$个元组。如果$S$在$Y$上有一个非聚簇的索引，那么所需的磁盘I/O数量是$\frac{T(R)T(S)}{V(S,Y)}$，如果索引是聚簇的，那么$\frac{T(R)B(S))}{V(S,Y)}$就够了。
 
 不管$R$是否聚簇，访问$S$的元组的代价是占主导地位的，忽略读入$R$的代价，代价分别为非聚簇的$\frac{T(R)T(S)}{V(S,Y)}$和聚簇的$T(R)(1,\frac{B(S))}{V(S,Y)})$
 
