--- a/5.4 代价估计(中间结果大小).md
+++ b/5.4 代价估计(中间结果大小).md
@@ -32,7 +32,7 @@
 
 例 令$R(a, b, c)$是一个关系，$S = \sigma_{a = 10 \ AND\  b < 20}(R)$。同时，令$T(R) = 10000$，$V(R, a) = 50$。则$T(S) = \frac {T(R)} {50 \times 3} = 67$
 
-$S = \sigma_{C_1\ OR C_2}(R)$，如果$R$有$n$个元组，其中$m_1$满足$C_1$，有$m_2$个满足$C_2$，我们估计S中元组的数目为：
+$S = \sigma_{C_1\ OR\ C_2}(R)$，如果$R$有$n$个元组，其中$m_1$满足$C_1$，有$m_2$个满足$C_2$，我们估计S中元组的数目为：
 
 $n(1 - (1 - \frac{m_1}{n})(1 - \frac{m_2}{n}))$
 
@@ -40,7 +40,7 @@ $n(1 - (1 - \frac{m_1}{n})(1 - \frac{m_2}{n}))$
 
 ###连接运算大小的估计
 $R(X, Y) \Join R(Y, Z)$，初步我们假设$Y$是单个属性
-1. 两个关系可能有不相交的$Y$值集合，在这种情况下，连接是一个空集且$T(R \Join S) = 0$
+1. 两个关系可能有不相交的$Y​$值集合，在这种情况下，连接是一个空集且$T(R \Join S) = 0​$
 2. $Y$可能是$S$的键并且是$R$的外键，因此$R$的每个元组正好与$S$中的一个元组连接，且$T(R \Join S) = T(R)$
 3. 几乎所有$S$与$R$的元组都具有相同的$Y$值，在这种情况下，$T(R \Join S) \approx T(R)T(S)$
 
