--- a/5.2 关系代数优化.md
+++ b/5.2 关系代数优化.md
@@ -1,4 +1,7 @@
+## 关系代数优化
+
 ##交换律和结合律
+
 ###笛卡尔积
 $$
 R\times S = S \times R \\
@@ -52,6 +55,7 @@ $$
    \Downarrow \\
    \sigma_{a = 1 \ OR \ a= 3}(R) \Join_{b < c}(S)
    $$
+
 
 
 
