--- a/5.6 连接顺序的选择.md
+++ b/5.6 连接顺序的选择.md
@@ -1,3 +1,5 @@
+## 连接顺序的选择
+
 ### 左右参数的意义
 
 假定选择一个物理计划时，选择一趟连接。假定该连接的左参数作为较小的关系存储在主存的数据结构中。该关系称为**构造用关系**。每次一块读入连接的右参数，称为**探查用关系**，并将它的元组与已存储的关系进行匹配。以参数作为区分的其他连接算法包括：
