--- a/7.4 有多种锁模式的封锁系统.md
+++ b/7.4 有多种锁模式的封锁系统.md
@@ -1,4 +1,6 @@
-简单的封锁模式过于简单而不是一个实用的模式。主要问题在于，事务$T$即使只想读数据库元素$X$而不写它，也必须获得$X$上的锁。而不获取锁，当$T$活跃时另一个事务可能为$X$写入一个新值而导致非可串行化行为。
+## 有多种锁模式的封锁系统
+
+*简单的封锁模式过于简单而不是一个实用的模式*。主要问题在于，事务$T$即使只想读数据库元素$X$而不写它，也必须获得$X$上的锁。而不获取锁，当$T$活跃时另一个事务可能为$X$写入一个新值而导致非可串行化行为。
 
 ### 共享锁和排他锁
 
