--- a/7.9 使用有效性确认的并发控制.md
+++ b/7.9 使用有效性确认的并发控制.md
@@ -1,3 +1,5 @@
+##有效性确认的并发控制
+
 有效性确认是一种乐观的并发控制类型，允许事务不经封锁访问数据，而是在适当的时候检查事务是否以一种可串行化的方式运转。有效性确认和时间戳的主要区别是调度器维护关于活跃事务正在做什么，而不是为所有数据库元素保存读时间和写时间。事务开始为数据库元素写入值前的一刹那，它经过一个有效性确认阶段，这时用它已经读的和将写的元素集合与其他活跃事务的写集合作比较。如果存在事实上不可实现行为的风险，该事务就回滚。
 
 ### 基于有效性确认调度器的结构
