--- a/6.3 redo日志.md
+++ b/6.3 redo日志.md
@@ -21,7 +21,7 @@ $R_1$：在修改磁盘上任何数据库元素$X$以前，要保证与$X$的这
 使用redo日志时，一个事务相关的写磁盘顺序为：
 
 1. 写修改数据库元素的日志记录
-2. $COMMIT$日志记录
+2. $COMMIT​$日志记录
 3. 写数据库元素。
 
 例：数据库中包含两个元素$A$和$B$，这两个元素要满足的约束是在任何一致的状态中它们的值相等。
