--- a/8.2 死锁.md
+++ b/8.2 死锁.md
@@ -43,11 +43,11 @@
 
 ###死锁管理方法的比较
 
-在**等待-死亡**和**等待-伤害**方案中，较老的事务杀死较新的事务。由于事务以旧时间戳重启，最终每个事务都将变成系统中最老的事务而必然能完成，这一保证被称作**无饿死**。
+在**等待-死亡**和**伤害-等待**方案中，较老的事务杀死较新的事务。由于事务以旧时间戳重启，最终每个事务都将变成系统中最老的事务而必然能完成，这一保证被称作**无饿死**。
 
-在伤害-等待方案中，只要老事务请求新事务持有的锁，新事务就被杀死，如果事务开始后接近的时间获得锁，那么老事务抢夺新事务持有的锁的情况就很少发生。因此在伤害-等待方案中，回滚比较少见。
+在**伤害-等待**方案中，只要老事务请求新事务持有的锁，新事务就被杀死，如果事务开始后接近的时间获得锁，那么老事务抢夺新事务持有的锁的情况就很少发生。因此在**伤害-等待**方案中，回滚比较少见。
 
-尽管等待-死亡方案可能比伤害-等待方案回滚的事务多，但这些事务常常只做了极少的工作。与此相比，当伤害-等待方案回滚事务时，该事物可能已经获得自己的锁且已经占用了大量的处理器的时间。因此，根据处理事务的数量不同，两种方案可能都比另一种浪费的更多。
+尽管**等待-死亡**方案可能比**伤害-等待**方案回滚的事务多，但这些事务常常只做了极少的工作。与此相比，当**伤害-等待**方案回滚事务时，该事物可能已经获得自己的锁且已经占用了大量的处理器的时间。因此，根据处理事务的数量不同，两种方案可能都比另一种浪费的更多。
 
-* 等待-死亡和伤害-等待的实现都比维护或周期性构造等待图容易。
-* 使用等待图能极小化由于死锁而必须中止事务的次数。如果我们中止事务，则必定是真的存在死锁。而等待-死亡和伤害-等待都会在并不存在死锁的情况下回滚事务。
+* **等待-死亡**和**伤害-等待**的实现都比维护或周期性构造等待图容易。
+* 使用等待图能极小化由于死锁而必须中止事务的次数。如果我们中止事务，则必定是真的存在死锁。而**等待-死亡**和**伤害-等待**都会在并不存在死锁的情况下回滚事务。
