fix images path

--- a/9.4 分布式查询处理.md
+++ b/9.4 分布式查询处理.md
@@ -9,7 +9,7 @@
 
 ###半简化连接
 $R(X,Y)$和$S(Y,Z)$的半连接是$R\ltimes S = R\Join (\pi_{Y}(S))$，其中$X$，$Y$，$Z​$都是属性的集合。
-![9-4-1](/Users/ace/z/Database-System-Implementation/images/9-4-1.jpg)
+![9-4-1](./images/9-4-1.jpg)
 
 如果满足下面至少一个条件，$\pi_Y(S)$就会比$S$小
 1. 有许多重复需要消除，即$Y$中很多元组的$Y$属性值相同。
@@ -28,11 +28,11 @@ $R(X,Y)$和$S(Y,Z)$的半连接是$R\ltimes S = R\Join (\pi_{Y}(S))$，其中$X$
 ###非循环超图
 $R(A,b)$，$S(B,C)$，$T(A,C)$的超图，有环，使它不存在完全化简。
 
-![9-4-2](/Users/ace/z/Database-System-Implementation/images/9-4-2.jpg)
+![9-4-2](./images/9-4-2.jpg)
 
 $R(A,E,F)$，$S(A,B,C)$，$T(C,D,E)$和$U(A,C,E)$的超图，是一个非循环超图。
 
-![9-4-3](/Users/ace/z/Database-System-Implementation/images/9-4-3.jpg)
+![9-4-3](./images/9-4-3.jpg)
 
 一个超边$H$是一个**耳朵**，若在同一个超图中存在另外的超边$G$使$H$中的每个节点满足下列情况之一：
 1. 仅包含在$H$中。
